Add Storing Trash
